--- a/ethnode/webui/styles/panel-heading.sass
+++ b/ethnode/webui/styles/panel-heading.sass
@@ -37,6 +37,7 @@ section.documentation .container
         padding-left: 0
         padding-right: 0
         border-bottom: 1px solid #e1e8ee
+        position: relative
 
         .main-information
             padding-right: 0
@@ -52,6 +53,10 @@ section.documentation .container
                     margin-right: 17px
                     float: left
                     border-radius: 3px
+
+                    &.portfolio-image
+                        width: 80%
+                        height: auto
 
                 .dont-have-logo
                     color: #0065cc
@@ -106,6 +111,23 @@ section.documentation .container
             padding-right: 0
             padding-left: 0
             margin-bottom: 25px
+            position: unset
+
+            h6.port-tags
+                font-size: 14px
+                margin: 0
+                padding-top: 10px
+
+            h3.portfolio-heading
+                font-size: 22px
+                font-weight: 500
+                line-height: 1.23
+                color: #43484d
+                margin: 0
+                margin-bottom: 10px
+
+            p.portfolio-description
+                margin-left: 0
 
             .dropdown.more
                 cursor: pointer
