--- a/ethnode/webui/styles/newstyles/modals/body.sass
+++ b/ethnode/webui/styles/newstyles/modals/body.sass
@@ -29,6 +29,8 @@
                 position: relative
                 top: 2px
 
+            label[for="reputationCost"] i
+                top: 0px !important
 
     .form-group
         position: relative
