--- a/ethnode/webui/mixins/modals/edit-profile.jade
+++ b/ethnode/webui/mixins/modals/edit-profile.jade
@@ -16,14 +16,14 @@
 
         .modal-body
 
-            //- .form-group
-            //-     input.input-file#input-image-job(type="file", placeholder="Add image or video")
-            //-     label(for="input-image-job") Add Educational Institution Logo
-            //-     img.file-input-first-image(src="images/image-video-image-file.png", alt="Add a file")
-            //-     img#input-image-job(src="#", alt="Preview")
+            .form-group
+                input.input-file#input-image-profile(type="file", accept="image/*", placeholder="Add image or video")
+                label.img-label(for="input-image-profile") Add Photo
+                img.file-input-first-image.img-profile(src="images/image-video-image-file.png", alt="Add a file")
+                img#input-image-profile.show-image.empty(src="#", alt="")
 
-            // This is from avatar ui modal.
-            //- .form-group.col-lg-4.col-md-4.col-sm-4.col-xs-12
+            //- // This is from avatar ui modal.
+            //- .form-group
             //-     input.input-file#input-image-avatar(type="file", placeholder="Add profile photo")
             //-     label(for="input-image-avatar") Add profile photo
             //-     img.file-input-first-image(src="images/image-video-image-file.png", alt="Add a file")
