profile data is now able to update and load

--- a/ethnode/webui/mixins/pages/profile.jade
+++ b/ethnode/webui/mixins/pages/profile.jade
@@ -30,6 +30,23 @@ section.documentation(style="display: none")
 
                     button.leave-msg Send Message
 
+                    // SKILLS
+                    p.skills-text Skills <i class="skills-down material-icons">keyboard_arrow_down</i>
+
+                    .skills.hidden
+                        //- p program management
+                        //- p angular
+                        //- p python
+
+                    // LANGUAGES
+                    p.skills-text Languages <i class="languages-down material-icons">keyboard_arrow_down</i>
+
+                    .languages.hidden
+                        //- p lithuanian
+                        //- p bulgarian
+
+
+
             .profile-information.middle
 
                 // Profile description including a description about you. (dark-gray section)
