--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -51,6 +51,7 @@ section.profiles-page-content
 
 .gigs-container-profile, .gigs-container-orders
     margin-top: 25px
+    width: 815px
 
 .gig
     width: 240px
