--- a/ethnode/webui/mixins/modals/gig/modal-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/modal-gig.jade
@@ -11,7 +11,7 @@
                 h2.title Title goes here
 
                 .owner-info
-                    img(src="/api/v1/profile/?q=avatar", alt="Avatar")
+                    img(src="http://via.placeholder.com/24x24", alt="Avatar")
                     h5 owner_nickname
                     h4 <i class="material-icons">polymer</i> 306 <span>expires in a day</span>
 
