--- a/ethnode/webui/mixins/tabs/orders.jade
+++ b/ethnode/webui/mixins/tabs/orders.jade
@@ -11,7 +11,7 @@
             .image-block: img(src="images/paypal.jpg")
 
         .owner-info
-            img(src="/api/v1/profile/?q=avatar", alt="Avatar")
+            img(src="http://via.placeholder.com/24x24", alt="Avatar")
             h5 owner_nickname
             h4 Entry Level
 
