Bug fixes + portfolio data saving, loading

--- a/ethnode/webui/mixins/modals/edit-profile.jade
+++ b/ethnode/webui/mixins/modals/edit-profile.jade
@@ -1,4 +1,4 @@
-#edit-profile.modal-box.flex.floating
+#edit-profile.modal-box.edit.flex.floating
 
     .modal-box-content: .inner-modal: .content
 
@@ -78,5 +78,5 @@
 
         .modal-footer
             button.mdl-button.mdl-js-button.close-button Close
-            button#update1.mdl-button.mdl-js-button.finish-button(style="color: #5CAB7D") Update
-            .mdl-tooltip(data-mdl-for="update1") This text will be changed anyway.
+            button#updateProfile.mdl-button.mdl-js-button.finish-button(style="color: #5CAB7D") Update
+            .mdl-tooltip(data-mdl-for="updateProfile") This text will be changed anyway.
