--- a/ethnode/webui/mixins/modals/portfolio/edit-portfolio.jade
+++ b/ethnode/webui/mixins/modals/portfolio/edit-portfolio.jade
@@ -1,4 +1,4 @@
-#edit-portfolio.add.modal-box.flex.floating
+#edit-portfolio.edit.modal-box.flex.floating
 
     .modal-box-content: .inner-modal: .content
 
@@ -26,8 +26,8 @@
 
                 form(action="POST")
                     .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label.whole-line
-                        input#gig-title.mdl-textfield__input(name="gig-title", type="text")
-                        label.mdl-textfield__label(for="gig-title") Portfolio title
+                        input#portfolio-title.mdl-textfield__input(name="portfolio-title", type="text")
+                        label.mdl-textfield__label(for="portfolio-title") Portfolio title
 
                     .mdl-textfield.mdl-js-textfield.whole-line
                         textarea#description.mdl-textfield__input(type="text" rows="3", name="description")
