--- a/ethnode/webui/styles/panel-heading.sass
+++ b/ethnode/webui/styles/panel-heading.sass
@@ -32,7 +32,8 @@
         text-transform: uppercase
 
 section.documentation .container
-    .content-block
+
+    .content-block:not(.gig)
         padding-top: 24px
         padding-left: 0
         padding-right: 0
