--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -676,7 +676,7 @@ section.documentation .container .profile-information-after-fixed .container-flu
   text-transform: uppercase;
 }
 
-section.documentation .container .content-block {
+section.documentation .container .content-block:not(.gig) {
   padding-top: 24px;
   padding-left: 0;
   padding-right: 0;
@@ -684,13 +684,13 @@ section.documentation .container .content-block {
   position: relative;
 }
 
-section.documentation .container .content-block .main-information {
+section.documentation .container .content-block:not(.gig) .main-information {
   padding-right: 0;
   padding-left: 0;
   padding-bottom: 25px;
 }
 
-section.documentation .container .content-block .main-information .image img, section.documentation .container .content-block .main-information .image .dont-have-logo {
+section.documentation .container .content-block:not(.gig) .main-information .image img, section.documentation .container .content-block:not(.gig) .main-information .image .dont-have-logo {
   height: 60px;
   width: 60px;
   margin-left: 20px;
@@ -699,12 +699,12 @@ section.documentation .container .content-block .main-information .image img, se
   border-radius: 3px;
 }
 
-section.documentation .container .content-block .main-information .image img.portfolio-image, section.documentation .container .content-block .main-information .image .dont-have-logo.portfolio-image {
+section.documentation .container .content-block:not(.gig) .main-information .image img.portfolio-image, section.documentation .container .content-block:not(.gig) .main-information .image .dont-have-logo.portfolio-image {
   width: 80%;
   height: auto;
 }
 
-section.documentation .container .content-block .main-information .image .dont-have-logo {
+section.documentation .container .content-block:not(.gig) .main-information .image .dont-have-logo {
   color: #0065cc;
   font-size: 24px;
   font-weight: 500;
@@ -714,12 +714,12 @@ section.documentation .container .content-block .main-information .image .dont-h
   display: none;
 }
 
-section.documentation .container .content-block .main-information .position-information {
+section.documentation .container .content-block:not(.gig) .main-information .position-information {
   margin-left: 100px;
   word-wrap: break-word;
 }
 
-section.documentation .container .content-block .main-information .position-information h4 {
+section.documentation .container .content-block:not(.gig) .main-information .position-information h4 {
   font-size: 18px;
   line-height: 1.09;
   font-weight: 500;
@@ -728,7 +728,7 @@ section.documentation .container .content-block .main-information .position-info
   margin-bottom: 7px;
 }
 
-section.documentation .container .content-block .main-information .position-information h5 {
+section.documentation .container .content-block:not(.gig) .main-information .position-information h5 {
   font-size: 14px;
   line-height: 1;
   color: #86939e;
@@ -737,7 +737,7 @@ section.documentation .container .content-block .main-information .position-info
   font-weight: 400;
 }
 
-section.documentation .container .content-block .main-information .position-information p {
+section.documentation .container .content-block:not(.gig) .main-information .position-information p {
   font-size: 12px;
   line-height: 1.17;
   color: #86939e;
@@ -745,31 +745,31 @@ section.documentation .container .content-block .main-information .position-info
   margin-bottom: 0;
 }
 
-section.documentation .container .content-block .main-information .position-information p.shoutout-business {
+section.documentation .container .content-block:not(.gig) .main-information .position-information p.shoutout-business {
   white-space: nowrap;
 }
 
-section.documentation .container .content-block .main-information .position-information p.shoutout-business span {
+section.documentation .container .content-block:not(.gig) .main-information .position-information p.shoutout-business span {
   position: relative;
   top: -5px;
   left: 5px;
   font-size: 12px;
 }
 
-section.documentation .container .content-block .main-description {
+section.documentation .container .content-block:not(.gig) .main-description {
   padding-right: 0;
   padding-left: 0;
   margin-bottom: 25px;
   position: unset;
 }
 
-section.documentation .container .content-block .main-description h6.port-tags {
+section.documentation .container .content-block:not(.gig) .main-description h6.port-tags {
   font-size: 14px;
   margin: 0;
   padding-top: 10px;
 }
 
-section.documentation .container .content-block .main-description h3.portfolio-heading {
+section.documentation .container .content-block:not(.gig) .main-description h3.portfolio-heading {
   font-size: 22px;
   font-weight: 500;
   line-height: 1.23;
@@ -778,15 +778,15 @@ section.documentation .container .content-block .main-description h3.portfolio-h
   margin-bottom: 10px;
 }
 
-section.documentation .container .content-block .main-description p.portfolio-description {
+section.documentation .container .content-block:not(.gig) .main-description p.portfolio-description {
   margin-left: 0;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more {
   cursor: pointer;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more i {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more i {
   float: right;
   margin-right: 25px;
   font-size: 28px;
@@ -794,11 +794,11 @@ section.documentation .container .content-block .main-description .dropdown.more
   display: none;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more i:hover {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more i:hover {
   color: #b2bcc6;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more ul {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more ul {
   right: 15px;
   top: -15px;
   left: auto;
@@ -809,7 +809,7 @@ section.documentation .container .content-block .main-description .dropdown.more
   z-index: 3000;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more ul li a {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more ul li a {
   font-size: 16px;
   font-weight: 500;
   color: #86939e;
@@ -817,12 +817,12 @@ section.documentation .container .content-block .main-description .dropdown.more
   padding: 0 25px;
 }
 
-section.documentation .container .content-block .main-description .dropdown.more ul li a:hover, section.documentation .container .content-block .main-description .dropdown.more ul li a:focus, section.documentation .container .content-block .main-description .dropdown.more ul li a:active {
+section.documentation .container .content-block:not(.gig) .main-description .dropdown.more ul li a:hover, section.documentation .container .content-block:not(.gig) .main-description .dropdown.more ul li a:focus, section.documentation .container .content-block:not(.gig) .main-description .dropdown.more ul li a:active {
   color: #127fff;
   background-color: #edf3fa;
 }
 
-section.documentation .container .content-block .main-description h4 {
+section.documentation .container .content-block:not(.gig) .main-description h4 {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.23;
@@ -831,13 +831,13 @@ section.documentation .container .content-block .main-description h4 {
   margin-right: 105px;
 }
 
-section.documentation .container .content-block .main-description p.education-paragraph {
+section.documentation .container .content-block:not(.gig) .main-description p.education-paragraph {
   margin-right: 40px;
   margin-bottom: 0;
   min-height: 100px;
 }
 
-section.documentation .container .content-block .main-description p {
+section.documentation .container .content-block:not(.gig) .main-description p {
   font-size: 14px;
   color: #86939e;
   line-height: 1.71;
@@ -846,7 +846,7 @@ section.documentation .container .content-block .main-description p {
   margin-bottom: 15px;
 }
 
-section.documentation .container .content-block .main-description span {
+section.documentation .container .content-block:not(.gig) .main-description span {
   border-radius: 3px;
   font-weight: 500;
   font-size: 12px;
@@ -854,7 +854,7 @@ section.documentation .container .content-block .main-description span {
   margin-left: 17px;
 }
 
-section.documentation .container .content-block .main-description span.accomplishment {
+section.documentation .container .content-block:not(.gig) .main-description span.accomplishment {
   background-color: rgba(254, 178, 48, 0.13);
   color: #d1a252;
   float: right;
@@ -1904,7 +1904,7 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 .modal-box-content .inner-modal .content .modal-footer {
   clear: both;
   border-top: none;
-  margin-top: 75px;
+  margin-top: 35px;
 }
 
 .flex.floating {
@@ -1916,9 +1916,9 @@ section.profiles-page-content .container .jobs .gigs-container:after {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1928,38 +1928,29 @@ section.profiles-page-content .container .jobs .gigs-container:after {
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  top: 0;
 }
 
 .flex.floating .modal-box-content .inner-modal {
-  border-radius: 50%;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-flex: none;
-      -ms-flex: none;
-          flex: none;
-  background: #01579B;
-  width: 0;
-  height: 0;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  -webkit-flex-grow: 5;
+      -ms-flex-positive: 5;
+          flex-grow: 5;
+  overflow-y: auto;
 }
 
 .flex.floating .modal-box-content .inner-modal .content {
   opacity: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 870px;
+  margin: 0 auto;
+  margin-top: 115px;
   transition: opacity .4s ease;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   color: #fefefe;
   text-align: center;
-  max-width: 90vw;
-  max-height: 90vh;
 }
 
 .modal.timeline .modal-dialog .modal-content {
