--- a/ethnode/webui/styles/newstyles/modals.sass
+++ b/ethnode/webui/styles/newstyles/modals.sass
@@ -20,7 +20,7 @@
     .modal-box-content
         border-radius: 50%
         display: flex
-        align-items: center
+        align-items: stretch
         justify-content: center
         z-index: 21
         width: 100%
@@ -28,23 +28,32 @@
         position: fixed
         top: 0
         left: 0
+        bottom: 0
+        top: 0
 
         .inner-modal
-            border-radius: 50%
-            display: flex
-            align-items: center
-            justify-content: center
-            flex: none
-            background: #01579B
-            width: 0
-            height: 0
-            backface-visibility: hidden
+            flex-grow: 5
+            overflow-y: auto
+            // border-radius: 50%
+            // display: flex
+            // align-items: center
+            // justify-content: center
+            // flex: none
+            // background: #01579B
+            // width: 0
+            // height: 0
+            // backface-visibility: hidden
 
             .content
                 opacity: 0
+                height: 100%
+                width: 100%
+                max-width: 870px
+                margin: 0 auto
+                margin-top: 115px
                 transition: opacity .4s ease
                 backface-visibility: hidden
                 color: #fefefe
                 text-align: center
-                max-width: 90vw
-                max-height: 90vh
+                // max-width: 90vw
+                // max-height: 90vh
