--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -126,7 +126,7 @@ section.gigs-page-content
 
                     .ui.fluid.image
                         .ui.black.ribbon.label Category
-                        .image-block: img(src="images/paypal.jpg")
+                        .image-block: img(src="images/pasypal.jpg")
 
                     .owner-info
                         img(src="http://via.placeholder.com/24x24", alt="Avatar")
