Changed CDN from localhost to london.ethearnal.com, implemented background image change and created default profile settings that will load on page load

--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -77,6 +77,7 @@ html(lang='en-US')
         include mixins/modals/gig/modal-gig
 
         include mixins/modals/edit-profile
+        include mixins/modals/edit-background-images
 
 
         // Including header
