--- a/ethnode/webui/styles/background-image.sass
+++ b/ethnode/webui/styles/background-image.sass
@@ -3,9 +3,34 @@ section.background-image
     margin-top: 59px
     position: relative
 
-    .owl-carousel .item img
-        width: 100%
-        height: 400px
+    .owl-carousel .item
+        position: relative
+
+        img
+            width: 100%
+            height: 400px
+
+        .text-on-image
+            position: absolute
+            left: 0
+            right: 0
+            bottom: 0
+            top: 0
+            opacity: 0.5
+            background-color: rgba(0, 0, 0, 1)
+            width: 100%
+            height: 100%
+            border: 5px solid rgba(0, 0, 0, 1)
+            cursor: pointer
+            display: none
+
+            p
+                color: white
+                font-size: 16px
+                font-weight: 500
+                line-height: 400px
+                text-align: center
+                opacity: 1
 
 section.background-image, .modal-body .image
     .button-next, .button-prev
