--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -1383,9 +1383,37 @@ section.background-image {
   position: relative;
 }
 
+section.background-image .owl-carousel .item {
+  position: relative;
+}
+
 section.background-image .owl-carousel .item img {
   width: 100%;
   height: 400px;
+}
+
+section.background-image .owl-carousel .item .text-on-image {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  opacity: 0.5;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  border: 5px solid black;
+  cursor: pointer;
+  display: none;
+}
+
+section.background-image .owl-carousel .item .text-on-image p {
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 400px;
+  text-align: center;
+  opacity: 1;
 }
 
 section.background-image .button-next, section.background-image .button-prev, .modal-body .image .button-next, .modal-body .image .button-prev {
