Quick CSS fix for background images

--- a/ethnode/webui/styles/background-image.sass
+++ b/ethnode/webui/styles/background-image.sass
@@ -5,10 +5,12 @@ section.background-image
 
     .owl-carousel .item
         position: relative
+        overflow: hidden
+        max-height: 400px
 
         img
             width: 100%
-            height: 400px
+            height: auto
 
         .text-on-image
             position: absolute
