--- a/ethnode/webui/mixins/pages/profile.jade
+++ b/ethnode/webui/mixins/pages/profile.jade
@@ -7,11 +7,11 @@ section.background-image(style="display: none")
             img(src="images/background-road-different.png", alt="Building")
             .text-on-image: p Change
 
-        .item
+        .item.second
             img(src="images/background-buildings.png", alt="Building")
             .text-on-image: p Change
 
-        .item
+        .item.third
             img(src="images/background-downtown.png", alt="Building")
             .text-on-image: p Change
 
