--- a/ethnode/webui/styles/newstyles/modals/body.sass
+++ b/ethnode/webui/styles/newstyles/modals/body.sass
@@ -32,6 +32,17 @@
             label[for="reputationCost"] i
                 top: 0px !important
 
+    h3
+        color: black
+        font-size: 22px
+        margin-bottom: 0
+        text-align: center
+        text-transform: lowercase
+        margin-top: 40px
+
+        &:first-child
+            margin-top: 0
+
     .form-group
         position: relative
         padding-left: 20px
