--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -1523,13 +1523,13 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 
 .gig {
   width: 240px;
-  height: 306px;
+  height: 290px;
   border: 1px solid #e5e5e5;
   box-shadow: 1px 2px 3px 0 rgba(0, 0, 0, 0.1);
-  background-color: white;
+  background-color: #FFFFFF;
   position: relative;
   max-width: 240px;
-  max-height: 306px;
+  max-height: 290px;
   float: left;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -1551,7 +1551,10 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 
 .gig .ui.label {
   z-index: 1;
-  background-color: #bfc0c1bd !important;
+
+  /*background-color: #bfc0c1ad !important;*/
+  background-color: #898989ad !important;
+
   border-color: #bfc0c1bd !important;
 }
 
@@ -1577,8 +1580,8 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 
 .gig .owner-info img {
   float: left;
-  width: 49px;
-  height: 49px;
+  width: 36px;
+  height: 36px;
   border-radius: 100%;
   margin-top: 1px;
   margin-right: 3px;
@@ -1591,7 +1594,13 @@ section.profiles-page-content .container .jobs .gigs-container:after {
   line-height: 1;
   color: black;
   margin-left: 32px;
+
   transition: all 0.15s ease-in;
+}
+
+span.gig-title {
+ color: black;
+ font-size: 16px;
 }
 
 .gig .owner-info h5:hover, .gig .owner-info h5:active, .gig .owner-info h5:focus {
@@ -1601,8 +1610,10 @@ section.profiles-page-content .container .jobs .gigs-container:after {
 
 .gig .owner-info h4 {
   color: #92A8D1;
-  font-size: 12px;
-  margin-top: 2px;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-left: 2px;
+
 }
 
 .gig .owner-info h4 i {
