--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -3044,3 +3044,95 @@ section.documentation .container .content-block .main-description button.dropdow
       -ms-transform: translate(-15px, -15px);
           transform: translate(-15px, -15px);
 }
+
+/* new modal thing */
+
+
+div#new-modal-thing {
+  display: none;
+  width: 100%;
+  height: 640px;
+
+}
+
+
+
+div.new-modal-header{
+    width: 100%;
+    height: 80px;
+    background-color: white;
+}
+
+
+div.new-modal-owner-info{
+    float: left;
+    width: 460px;
+    height: 80px;
+    background-color: green;
+}
+
+div.new-modal-others{
+    float: right;
+    width: 160px;
+    height: 80px;
+    background-color: gray;
+}
+
+div#new-modal-gig-image{
+    position: relative;
+    width: 100%;
+    height: 480px;
+    background-size: 300px 100px;
+
+}
+
+div#new-modal-gig-title {
+    float: left;
+    height: 140;
+    font-size: 36px;
+    color: white;
+
+    margin-top: 69px;
+    padding-left: 30px;
+    padding-top: 18px;
+    padding-bottom: 8px;
+    padding-right: 8px;
+    border-radius: 0px 5px 5px 0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+
+    background: #92a8d1;
+    opacity: 0.95;
+}
+
+div#new-modal-description{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+    min-width: 120px;
+    min-height: 120px;
+    padding-top: 18px;
+    padding-left: 8px;
+    margin-bottom: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+
+    font-size: 18px;
+    border-radius: 5px 0px 0px 5px;
+    background: #ffecec;
+    opacity: 0.95;
+}
+
+div.new-modal-footer{
+
+
+    width: 100%;
+    height: 80px;
+    background-color: gray;
+}
+
+/* end new modal styles */
+
+
+
+
+
